--- a/markov_asset.ipynb
+++ b/markov_asset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "891788ad",
+   "id": "769a2b52",
    "metadata": {},
    "source": [
     "# An Asset Pricing Problem"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccd54f55",
+   "id": "f82e2471",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "848597cb",
+   "id": "8456a070",
    "metadata": {
     "hide-output": false
    },
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0397bb92",
+   "id": "e76d1996",
    "metadata": {},
    "source": [
     "Below we use the following imports"
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2432153c",
+   "id": "626eb239",
    "metadata": {
     "hide-output": false
    },
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0927afa5",
+   "id": "2d4fbc9f",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase precision."
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "644495e2",
+   "id": "42acb2a6",
    "metadata": {
     "hide-output": false
    },
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5cf4019",
+   "id": "2aacf21e",
    "metadata": {},
    "source": [
     "## Pricing a single payoff\n",
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21e0e9b2",
+   "id": "3950760d",
    "metadata": {},
    "source": [
     "## Pricing a cash flow\n",
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50054291",
+   "id": "bfbdf2a9",
    "metadata": {},
    "source": [
     "## Choosing the stochastic discount factor\n",
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e26a9450",
+   "id": "e3ccde86",
    "metadata": {},
    "source": [
     "## Solving for the price-dividend ratio\n",
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "622e1008",
+   "id": "1581d1d9",
    "metadata": {},
    "source": [
     "## Code\n",
@@ -411,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4bd665a",
+   "id": "694e5826",
    "metadata": {
     "hide-output": false
    },
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb655bef",
+   "id": "84018891",
    "metadata": {},
    "source": [
     "The next function verifies that the spectral radius of a given matrix is $ < 1 $."
@@ -454,7 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82835754",
+   "id": "838ba310",
    "metadata": {
     "hide-output": false
    },
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f3eb7d5",
+   "id": "924813a6",
    "metadata": {},
    "source": [
     "In what follows we assume that $ \\{X_t\\} $, the state process, is a discretization of the AR(1) process\n",
@@ -489,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b222fc66",
+   "id": "bf199fa2",
    "metadata": {
     "hide-output": false
    },
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d0a033e",
+   "id": "82bd1419",
    "metadata": {},
    "source": [
     "Our first step is to construct the matrix $ K $.\n",
@@ -530,7 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ecf36dad",
+   "id": "f1b9ae4d",
    "metadata": {
     "hide-output": false
    },
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00e69d47",
+   "id": "2e27dc6d",
    "metadata": {},
    "source": [
     "Just to double check, let’s write a loop version and check we get the same matrix."
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ffbebec",
+   "id": "a831b9af",
    "metadata": {
     "hide-output": false
    },
@@ -581,7 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd1fe21b",
+   "id": "3eb3445e",
    "metadata": {
     "hide-output": false
    },
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73c516a9",
+   "id": "03727eff",
    "metadata": {},
    "source": [
     "Now we can compute the price-dividend ratio:"
@@ -604,7 +604,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14144162",
+   "id": "886e0ed1",
    "metadata": {
     "hide-output": false
    },
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f78da4f9",
+   "id": "65090181",
    "metadata": {},
    "source": [
     "Here’s a plot of $ v $ as a function of the state for several values of $ \\gamma $."
@@ -650,7 +650,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5d35070",
+   "id": "c107a377",
    "metadata": {
     "hide-output": false
    },
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d38d1685",
+   "id": "4b4aba89",
    "metadata": {},
    "source": [
     "Notice that $ v $ is decreasing in each case.\n",
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62d9f505",
+   "id": "877154d2",
    "metadata": {},
    "source": [
     "## An Extended Example\n",
@@ -847,7 +847,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08464d87",
+   "id": "b5f94329",
    "metadata": {},
    "source": [
     "## Numpy Version\n",
@@ -868,7 +868,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3621a62",
+   "id": "8b5711c5",
    "metadata": {
     "hide-output": false
    },
@@ -913,7 +913,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a4796cf",
+   "id": "4e0c6a64",
    "metadata": {},
    "source": [
     "Now we provide a function to compute the matrix $ H $."
@@ -922,7 +922,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26652bbb",
+   "id": "ad28889f",
    "metadata": {
     "hide-output": false
    },
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "763d9e24",
+   "id": "fba09cf5",
    "metadata": {},
    "source": [
     "Here’s our function to compute the price-dividend ratio for the stochastic volatility model."
@@ -960,7 +960,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67c3faf2",
+   "id": "3fa93435",
    "metadata": {
     "hide-output": false
    },
@@ -1003,7 +1003,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3f9b0fd",
+   "id": "db50b13a",
    "metadata": {},
    "source": [
     "Let’s create an instance of the model and solve it."
@@ -1012,7 +1012,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a9ce542",
+   "id": "78642f2f",
    "metadata": {
     "hide-output": false
    },
@@ -1025,7 +1025,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be4b751d",
+   "id": "ca5530b9",
    "metadata": {
     "hide-output": false
    },
@@ -1038,7 +1038,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca708486",
+   "id": "4ea56249",
    "metadata": {},
    "source": [
     "Here are some plots of the solution $ v $ along the three dimensions."
@@ -1047,7 +1047,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c495dd83",
+   "id": "563dfe5d",
    "metadata": {
     "hide-output": false
    },
@@ -1064,7 +1064,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e705e4e8",
+   "id": "2d16ade7",
    "metadata": {
     "hide-output": false
    },
@@ -1081,7 +1081,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0224714",
+   "id": "7c988c2c",
    "metadata": {
     "hide-output": false
    },
@@ -1097,7 +1097,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aefc76a5",
+   "id": "d515e066",
    "metadata": {},
    "source": [
     "## JAX Version\n",
@@ -1110,7 +1110,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ddd148da",
+   "id": "2400fb4f",
    "metadata": {
     "hide-output": false
    },
@@ -1134,7 +1134,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6fca15f",
+   "id": "85335091",
    "metadata": {},
    "source": [
     "Here’s a function to compute $ H $.\n",
@@ -1147,7 +1147,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29d95608",
+   "id": "8e591bff",
    "metadata": {
     "hide-output": false
    },
@@ -1176,7 +1176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54e8fd12",
+   "id": "9089c73f",
    "metadata": {},
    "source": [
     "Here’s the function that computes the solution."
@@ -1185,7 +1185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8785483c",
+   "id": "aec1e1fc",
    "metadata": {
     "hide-output": false
    },
@@ -1224,7 +1224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b90a403",
+   "id": "91f2f0a7",
    "metadata": {},
    "source": [
     "Now let’s target these functions for JIT-compilation, while using `static_argnums` to indicate that the function will need to be recompiled when `shapes` changes."
@@ -1233,7 +1233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17d7bc81",
+   "id": "00fd1d70",
    "metadata": {
     "hide-output": false
    },
@@ -1246,7 +1246,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f52392a",
+   "id": "1abcce61",
    "metadata": {
     "hide-output": false
    },
@@ -1260,7 +1260,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47dc24da",
+   "id": "79b88a60",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to run with compile time included."
@@ -1269,7 +1269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6d1e049",
+   "id": "aa378878",
    "metadata": {
     "hide-output": false
    },
@@ -1282,7 +1282,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6531ef0",
+   "id": "8fd504b2",
    "metadata": {},
    "source": [
     "And now let’s see without compile time."
@@ -1291,7 +1291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae2014c9",
+   "id": "1b0847d9",
    "metadata": {
     "hide-output": false
    },
@@ -1304,7 +1304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ed470db",
+   "id": "1c3d06ea",
    "metadata": {},
    "source": [
     "Here’s the ratio of times:"
@@ -1313,7 +1313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b39bf2c1",
+   "id": "f5fcd1d4",
    "metadata": {
     "hide-output": false
    },
@@ -1324,7 +1324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95d17d48",
+   "id": "09f08d01",
    "metadata": {},
    "source": [
     "Let’s check that the NumPy and JAX versions realize the same solution."
@@ -1333,7 +1333,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "663419e8",
+   "id": "4aff705d",
    "metadata": {
     "hide-output": false
    },
@@ -1346,7 +1346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "844ef6cd",
+   "id": "d0154c03",
    "metadata": {},
    "source": [
     "## A memory-efficient JAX version\n",
@@ -1369,7 +1369,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ae4b637",
+   "id": "8e83a346",
    "metadata": {
     "hide-output": false
    },
@@ -1396,7 +1396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "987abe9f",
+   "id": "5454e6aa",
    "metadata": {},
    "source": [
     "Now we write a version of the solution function for the price-dividend ratio\n",
@@ -1406,7 +1406,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3068e21",
+   "id": "e7731c2a",
    "metadata": {
     "hide-output": false
    },
@@ -1430,7 +1430,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29a711da",
+   "id": "7bf6653a",
    "metadata": {},
    "source": [
     "Let’s target these functions for JIT compilation."
@@ -1439,7 +1439,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "630496de",
+   "id": "a8b0b0ea",
    "metadata": {
     "hide-output": false
    },
@@ -1451,7 +1451,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7efda7df",
+   "id": "8997def7",
    "metadata": {},
    "source": [
     "Let’s time the solution with compile time included."
@@ -1460,7 +1460,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e7be6ff",
+   "id": "4a3c7a34",
    "metadata": {
     "hide-output": false
    },
@@ -1473,7 +1473,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7446650",
+   "id": "69d6c242",
    "metadata": {},
    "source": [
     "And now let’s see without compile time."
@@ -1482,7 +1482,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d44e191e",
+   "id": "19c8dc77",
    "metadata": {
     "hide-output": false
    },
@@ -1495,7 +1495,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41034d2c",
+   "id": "9d77aca4",
    "metadata": {},
    "source": [
     "Let’s verify the solution again:"
@@ -1504,7 +1504,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee7cc603",
+   "id": "6588a1a5",
    "metadata": {
     "hide-output": false
    },
@@ -1515,7 +1515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c9110d8",
+   "id": "bdfd3cc1",
    "metadata": {},
    "source": [
     "Here’s the ratio of times between memory-efficient and direct version:"
@@ -1524,7 +1524,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d470bdfa",
+   "id": "6e187af2",
    "metadata": {
     "hide-output": false
    },
@@ -1535,7 +1535,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53a2be9c",
+   "id": "1dfa849a",
    "metadata": {},
    "source": [
     "The speed is somewhat faster and, moreover, we can now work with much larger grids.\n",
@@ -1546,7 +1546,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32d091d0",
+   "id": "aa3a4916",
    "metadata": {
     "hide-output": false
    },
@@ -1564,7 +1564,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0974db3b",
+   "id": "dd0709d7",
    "metadata": {},
    "source": [
     "The solution is computed relatively quickly and without memory issues.\n",
@@ -1575,7 +1575,7 @@
   }
  ],
  "metadata": {
-  "date": 1693975982.114332,
+  "date": 1694155319.6124463,
   "filename": "markov_asset.md",
   "kernelspec": {
    "display_name": "Python",
