--- a/about.ipynb
+++ b/about.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8e234f6e",
+   "id": "e39b1046",
    "metadata": {},
    "source": [
     "# About\n",
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b42f85f2",
+   "id": "a3c82e1c",
    "metadata": {},
    "source": [
     "## What is JAX?\n",
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14e59d1d",
+   "id": "1e6ff986",
    "metadata": {},
    "source": [
     "## How to run these lectures\n",
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fab50b70",
+   "id": "489b17ad",
    "metadata": {},
    "source": [
     "## Credits\n",
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5253e24",
+   "id": "918f747f",
    "metadata": {},
    "source": [
     "## Prerequisites\n",
@@ -143,7 +143,7 @@
   }
  ],
  "metadata": {
-  "date": 1693975981.5725942,
+  "date": 1694155319.082972,
   "filename": "about.md",
   "kernelspec": {
    "display_name": "Python",
