--- a/newtons_method.ipynb
+++ b/newtons_method.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "de54520a",
+   "id": "4483fcbd",
    "metadata": {},
    "source": [
     "# Newton’s Method via JAX"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b7a2f7f",
+   "id": "27b30ca3",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be29e286",
+   "id": "2bd92995",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f695a20",
+   "id": "0cd89908",
    "metadata": {
     "hide-output": false
    },
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e02eaaa",
+   "id": "cbcd019e",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "857929c5",
+   "id": "36a05a76",
    "metadata": {
     "hide-output": false
    },
@@ -76,13 +76,117 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90988558",
+   "id": "4be66586",
    "metadata": {},
    "source": [
-    "## The Equilibrium Problem\n",
+    "## Newton in one dimension\n",
     "\n",
-    "In this section we describe the market equilibrium problem we will solve with\n",
-    "JAX.\n",
+    "As a warm up, let’s implement Newton’s method in JAX for a simple\n",
+    "one-dimensional root-finding problem.\n",
+    "\n",
+    "[Recall](https://python.quantecon.org/newton_method.html) that Newton’s method for solving for the root of $ f $ involves iterating with the map $ q $ defined by\n",
+    "\n",
+    "$$\n",
+    "q(x) = x - \\frac{f(x)}{f'(x)}\n",
+    "$$\n",
+    "\n",
+    "Here is a function called `newton` that takes a function $ f $ plus a guess $ x_0 $, iterates with $ q $ starting from $ x0 $, and returns an approximate fixed point."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a809a222",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
+    "def newton(f, x_0, tol=1e-5):\n",
+    "    f_prime = jax.grad(f)\n",
+    "    def q(x):\n",
+    "        return x - f(x) / f_prime(x)\n",
+    "\n",
+    "    error = tol + 1\n",
+    "    x = x_0\n",
+    "    while error > tol:\n",
+    "        y = q(x)\n",
+    "        error = abs(x - y)\n",
+    "        x = y\n",
+    "        \n",
+    "    return x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5421ca13",
+   "metadata": {},
+   "source": [
+    "The code above uses automatic differentiation to calculate $ f' $ via the call to `jax.grad`.\n",
+    "\n",
+    "Let’s test our `newton` routine on the function shown below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "80c78b2a",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
+    "f = lambda x: jnp.sin(4 * (x - 1/4)) + x + x**20 - 1\n",
+    "x = jnp.linspace(0, 1, 100)\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.plot(x, f(x), label='$f(x)$')\n",
+    "ax.axhline(ls='--', c='k')\n",
+    "ax.set_xlabel('$x$', fontsize=12)\n",
+    "ax.set_ylabel('$f(x)$', fontsize=12)\n",
+    "ax.legend(fontsize=12)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bbb6a046",
+   "metadata": {},
+   "source": [
+    "Here we go"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1de50ddd",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
+    "newton(f, 0.2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2732c4b2",
+   "metadata": {},
+   "source": [
+    "This number looks good, given the figure."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7219fd1f",
+   "metadata": {},
+   "source": [
+    "## An Equilibrium Problem\n",
+    "\n",
+    "Now let’s move up to higher dimensions.\n",
+    "\n",
+    "First we describe a market equilibrium problem we will solve with JAX via root-finding.\n",
     "\n",
     "We begin with a two good case,\n",
     "which is borrowed from [an earlier lecture](https://python.quantecon.org/newton_method.html).\n",
@@ -92,7 +196,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "169c8f13",
+   "id": "1f247c92",
    "metadata": {},
    "source": [
     "### The Two Goods Market Equilibrium\n",
@@ -148,7 +252,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5890189f",
+   "id": "4d45a508",
    "metadata": {},
    "source": [
     "### A High-Dimensional Version\n",
@@ -180,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c82432cd",
+   "id": "281353a7",
    "metadata": {
     "hide-output": false
    },
@@ -192,7 +296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80cf6753",
+   "id": "54b1d1c0",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -202,7 +306,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3ef79fc",
+   "id": "a7071e60",
    "metadata": {},
    "source": [
     "### Newton’s Method\n",
@@ -227,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21089fae",
+   "id": "a04a11c4",
    "metadata": {
     "hide-output": false
    },
@@ -255,7 +359,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8871d27e",
+   "id": "0fb51314",
    "metadata": {},
    "source": [
     "### Application\n",
@@ -268,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9bc616ee",
+   "id": "08512666",
    "metadata": {
     "hide-output": false
    },
@@ -292,7 +396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "100f5cfd",
+   "id": "28b6bdf2",
    "metadata": {},
    "source": [
     "Here’s our initial condition $ p_0 $"
@@ -301,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3671862",
+   "id": "0de54138",
    "metadata": {
     "hide-output": false
    },
@@ -312,7 +416,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5203b949",
+   "id": "ac3081d9",
    "metadata": {},
    "source": [
     "By leveraging the power of Newton’s method, JAX accelerated linear algebra,\n",
@@ -323,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4bfdb362",
+   "id": "fc6ae3ea",
    "metadata": {
     "hide-output": false
    },
@@ -337,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e009c9af",
+   "id": "4bb2b8e4",
    "metadata": {
     "hide-output": false
    },
@@ -348,7 +452,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4ba2a0b",
+   "id": "8c56c3b3",
    "metadata": {},
    "source": [
     "With the same tolerance, SciPy’s `root` function takes much longer to run,\n",
@@ -358,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "679fb06f",
+   "id": "9fd3754d",
    "metadata": {
     "hide-output": false
    },
@@ -376,7 +480,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70ac5b72",
+   "id": "3395f478",
    "metadata": {
     "hide-output": false
    },
@@ -388,7 +492,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "595a30e7",
+   "id": "7f1cfec6",
    "metadata": {},
    "source": [
     "The result is also less accurate."
@@ -396,7 +500,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b058dc68",
+   "id": "f1e7bf65",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -404,7 +508,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a35820bd",
+   "id": "be97a753",
    "metadata": {},
    "source": [
     "## Exercise 3.1\n",
@@ -464,7 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5e8fc96",
+   "id": "eb8ccb52",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 3.1](https://jax.quantecon.org/#newton_ex1)\n",
@@ -475,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "294ad067",
+   "id": "415b4087",
    "metadata": {
     "hide-output": false
    },
@@ -494,7 +598,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de137494",
+   "id": "28e35bca",
    "metadata": {},
    "source": [
     "Then define the multivariate version of the formula for the [law of motion of capital](https://python.quantecon.org/newton_method.html#solow)"
@@ -503,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72a6de74",
+   "id": "5e8d9dfa",
    "metadata": {
     "hide-output": false
    },
@@ -515,7 +619,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5f05cb3",
+   "id": "795bcead",
    "metadata": {},
    "source": [
     "Let’s run through each starting value and see the output"
@@ -524,7 +628,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f4c8d66",
+   "id": "4ec89738",
    "metadata": {
     "hide-output": false
    },
@@ -541,7 +645,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "297d7cb4",
+   "id": "ac996bbe",
    "metadata": {},
    "source": [
     "We find that the results are invariant to the starting values given the well-defined property of this question.\n",
@@ -554,7 +658,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9cb99aa8",
+   "id": "4394e881",
    "metadata": {
     "hide-output": false
    },
@@ -565,7 +669,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4cd16777",
+   "id": "07815cc8",
    "metadata": {},
    "source": [
     "Note the error is very small.\n",
@@ -576,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a421152a",
+   "id": "a564b059",
    "metadata": {
     "hide-output": false
    },
@@ -595,7 +699,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74bbf8dd",
+   "id": "93056879",
    "metadata": {},
    "source": [
     "The result is very close to the ground truth but still slightly different.\n",
@@ -606,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d7a2d60",
+   "id": "2c33dc47",
    "metadata": {
     "hide-output": false
    },
@@ -623,7 +727,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b98a8a77",
+   "id": "33d8e767",
    "metadata": {},
    "source": [
     "We can see it steps towards a more accurate solution."
@@ -631,7 +735,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7765da33",
+   "id": "df1d6414",
    "metadata": {},
    "source": [
     "## Exercise 3.2\n",
@@ -677,7 +781,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e140c1e9",
+   "id": "a9a8c792",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 3.2](https://jax.quantecon.org/#newton_ex2)\n",
@@ -688,7 +792,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d488fd89",
+   "id": "0cb706ea",
    "metadata": {
     "hide-output": false
    },
@@ -707,7 +811,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f31bc36",
+   "id": "5b849938",
    "metadata": {},
    "source": [
     "Let’s run through each initial guess and check the output"
@@ -716,7 +820,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e711e17",
+   "id": "1f01f91e",
    "metadata": {
     "hide-output": false
    },
@@ -735,7 +839,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9df94295",
+   "id": "5f631b48",
    "metadata": {},
    "source": [
     "We can find that Newton’s method may fail for some starting values.\n",
@@ -748,7 +852,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16b8791a",
+   "id": "c73b5ebc",
    "metadata": {
     "hide-output": false
    },
@@ -759,7 +863,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61866a4d",
+   "id": "fa1bacdf",
    "metadata": {},
    "source": [
     "We can see the result is very accurate."
@@ -767,7 +871,7 @@
   }
  ],
  "metadata": {
-  "date": 1693975982.1940186,
+  "date": 1694155319.696053,
   "filename": "newtons_method.md",
   "kernelspec": {
    "display_name": "Python",
